--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "purescript-prelude",
+  "version": "3.0.0",
   "private": true,
   "scripts": {
     "clean": "rimraf output && rimraf .pulp-cache",
